--- a/test_kinect/package.xml
+++ b/test_kinect/package.xml
@@ -53,18 +53,22 @@
   <build_depend>openni_camera</build_depend>
   <build_depend>openni_launch</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>image_transport</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>openni_camera</build_export_depend>
   <build_export_depend>openni_launch</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>'
+  <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>openni_camera</exec_depend>
   <exec_depend>openni_launch</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>image_transport</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
 
